[tool.poetry]
name = "ddd-em-python"
version = "0.1.0"
description = "Exemplos para os artigos sobre DDD que escrevo"
authors = ["Victor Hugo Viana <torugo.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ddd_em_python"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
sqlalchemy = "^2.0.16"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
